0.12.1dev: Avoid wrapping listing table headings.
Closes #9436.


git-svn-id: http://trac.edgewall.org/intertrac/log:/branches/0.12-stable@10112 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -465,6 +465,7 @@ table.listing thead th {
  font-weight: bold;
  padding: 2px .5em;
  vertical-align: bottom;
+ white-space: nowrap;
 }
 table.listing thead th :link:hover, table.listing thead th :visited:hover {
  background-color: transparent;
